--- a/.gitignore
+++ b/.gitignore
@@ -163,4 +163,6 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
+
+#Misc
 049_LinkedIn_Job_Automation/
